<resources>
    <string name="app_name">Diplomová práca 2016</string>
    <string name="app_version_text">Copyright \u00a9 2016 Verzia %1$s</string>

    <string name="home">Domov</string>
    <string name="preview">Náhľad</string>
    <string name="export_image">Uložiť obrázok</string>
    <string name="load_image">Načítaj odtlačok</string>
    <string name="scan_image">Skenuj odtlačok</string>
    <string name="select_image">Vyber odtlačok</string>
    <string name="preprocessing">Predspracovanie</string>
    <string name="automatic_preprocessing">Automatické predspracovanie</string>
    <string name="automatic_preprocessing_steps">Po krokoch</string>
    <string name="automatic_preprocessing_full">Automaticky</string>
    <string name="manual_preprocessing">Manuálne predspracovanie</string>
    <string name="information">Informácie</string>
    <string name="info_text">Aplikacia Diplomovka (v.%1$s) slúži na extrakciu komplexných markantov z odtlačkov prstov pomocou metódy Crossing Number. Odtlačky prstov potrebné na túto extrakciu je možné skenovať priamo pomocou tejto aplikácie po pripojení externého skenera odtlačkov Futronic FS80.</string>
    <string name="settings">Nastavenia</string>
    <string name="error">Chyba !</string>
    <string name="sdcard_unmounted">Súbor je možné uložiť len na SD kartu !</string>
    <string name="exit">Vypnúť</string>
    <string name="exit_question_title">Chcete ukončiť aplikáciu ?</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>

    <!-- Segmentation -->
    <string name="segmentation">Segmentácia</string>
    <string name="segmentation_block">Veľkosť bloku: </string>
    <string name="segmentation_running">Prebieha segmentácia ...</string>
    <string name="segmentation_finished">Segmentácia dokončená</string>
    <string name="segmentation_settings_title">Vstupné parametre pre segmentáciu</string>

    <!-- Normalisation -->
    <string name="normalisation">Normalizácia</string>
    <string name="normalisation_contrast">Zvýšenie kontrastu: </string>
    <string name="normalisation_running">Prebieha normalizácia ...</string>
    <string name="normalisation_finished">Normalizácia dokončená</string>
    <string name="normalisation_settings_title">Vstupné parametre pre normalizáciu</string>

    <!-- Filtering -->
    <string name="filtering">Filtrovanie</string>
    <string name="filtering_block">Veľkosť filtra: </string>
    <string name="filtering_frequency">Frekvencia (lambda): </string>
    <string name="filtering_strength">Sila filtra (sigma): </string>
    <string name="filtering_gamma">Pomer dlzka/sirka (gamma): </string>
    <string name="filtering_psi">Vysunutie filtra (psi): </string>
    <string name="filtering_running">Prebieha filtrovanie …</string>
    <string name="filtering_finished">Filtrovanie dokončené</string>
    <string name="filtering_settings_title">Vstupné parametre pre filtrovanie</string>
    <string name="direction_map">Smerová mapa</string>
    <string name="frequence_map">Frekvenčná mapa</string>
    <string name="gabor_filter">Gabor filter</string>

    <!-- Binarisation -->
    <string name="binarisation">Binarizácia</string>
    <string name="binarisation_block">Veľkosť bloku: </string>
    <string name="binarisation_running">Prebieha binarizácia ...</string>
    <string name="binarisation_finished">Binarizácia dokončená</string>
    <string name="binarisation_settings_title">Vstupné parametre pre binarizáciu</string>

    <!-- Thinning -->
    <string name="thinning">Vytvorenie kostry odtlačku</string>
    <string name="thinning_block">Veľkosť bloku: </string>
    <string name="thinning_running">Prebieha zužovanie línií ...</string>
    <string name="thinning_finished">Zužovanie dokončené</string>
    <string name="thinning_settings_title">Vstupné parametre pre zužovanie línií</string>

    <!-- Extraction -->
    <string name="extraction">Extrakcia markantov</string>
    <string name="go_to_extraction">Prejsť na extrakciu</string>
    <string name="extraction_start">Spustiť extrakciu</string>
    <string name="extraction_running">Prebieha extrakcia markantov ...</string>
    <string name="extraction_settings_title">Extrakcia markantov</string>
    <string name="minutie_ending">Ukončenia</string>
    <string name="minutie_bifurcation">Rozdvojenia</string>
    <string name="minutie_fragment">Fragment</string>
    <string name="minutie_dot">Bod</string>
    <string name="minutie_lake">Jazero</string>
    <string name="minutie_break">Prerušenie</string>
    <string name="minutie_crossbar">Prekríženie</string>
    <string name="minutie_bridge">Premostenie</string>
    <string name="minutie_oposed_bifurcation">Protiľahlé vidlice</string>
    <string name="minutie_trifurcation">Trifurkácia</string>
    <string name="minutie_anchorage">Ukotvenie</string>
    <string name="minutie_hook">Hák</string>

    <string name="start_process">Štart</string>
    <string name="next_process">Ďalej</string>
    <string name="ok">OK</string>
    <string name="search">Hľadať</string>
    <string name="title_activity_load_image">Preview</string>
    <string name="title_activity_segmentation">Segmentation</string>
    <string name="title_activity_normalisation">Normalisation</string>
    <string name="title_activity_filtering">Filtering</string>
    <string name="title_activity_thinning">Thinning</string>
    <string name="title_activity_binarisation">Binarisation</string>
    <string name="title_activity_extraction">Extraction</string>
    
    <string name="size_between_minutie">Minimálna vzdialenosť medzi markantmi: </string>
    <string name="size_of_fragments">Veľkosť fragmentov (od - do): </string>
    <string name="create_txt_file">Vytvoriť .txt súbor s markantmi</string>

    <!-- Futronic scanner -->
    <string name="futronic_title">Futronic FS80</string>
    <string name="scan">Skenovať</string>
    <string name="stop">Zastaviť</string>
    <string name="save">Uložiť</string>
    <string name="save_and_run">Uložiť a použiť</string>
    <string name="file_name">Názov odtlačku</string>
    <string name="scanner_unplag">Externý snímač nie je pripojený.</string>
    <string name="image_saved">Odtlačok bol uložený.</string>
    <string name="txt_saved">Textový súbor bol uložený.</string>
    <string name="scanner_plug">Externý snímač je pripojený.</string>

</resources>
