<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/popUpSettingTextTitle"
                style="@style/PopUpTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/extraction_settings_title" />

            <LinearLayout
                android:id="@+id/popup_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popUpSettingTextTitle"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:fillViewport="true">

                    <RadioGroup
                        android:id="@+id/radioButtonGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:drawableRight="@drawable/ending"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_ending" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/bifurcation"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_bifurcation" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/fragment"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_fragment" />

                        <RadioButton
                            android:id="@+id/radioButton12"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/dot"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_dot" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/lake"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_lake" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/breakk"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_break" />

                        <RadioButton
                            android:id="@+id/radioButton6"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/crossbar"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_crossbar" />

                        <RadioButton
                            android:id="@+id/radioButton7"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/bridge"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_bridge" />

                        <RadioButton
                            android:id="@+id/radioButton8"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/oposed_bifurcation"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_oposed_bifurcation" />

                        <RadioButton
                            android:id="@+id/radioButton9"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/trifurcation"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_trifurcation" />

                        <RadioButton
                            android:id="@+id/radioButton10"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/anchorage"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_anchorage" />

                        <RadioButton
                            android:id="@+id/radioButton11"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/hook"
                            android:enabled="false"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/minutie_hook" />

                    </RadioGroup>
                </ScrollView>

                <LinearLayout
                    android:id="@+id/edittext1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textForEdittext"
                        style="@style/SettingsItem"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/size_between_minutie" />


                    <EditText
                        android:id="@+id/settingsEdittext"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/edittext_style"
                        android:ellipsize="start"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edittext2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textForEdittext2"
                        style="@style/SettingsItem"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/size_of_fragments" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp">


                    <EditText
                        android:id="@+id/settingsEdittext2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/edittext_style"
                        android:ellipsize="start"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/settingsEdittext3"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/edittext_style"
                        android:ellipsize="start"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/edittext3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp">

                    <CheckBox
                        android:id="@+id/checkboxTxtId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxTxt"
                        android:text="@string/create_txt_file" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/popUpOK"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/popup_settings"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="@string/search" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>