<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="com.example.michal.myapplication.Binarisation">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:titleTextAppearance="@style/ToolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/binarisation" />

    <LinearLayout
        android:id="@+id/content_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/view_binarisation_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:background="@color/black50"
            android:gravity="center"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_binarisation"
                style="@style/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:padding="5dp"
                android:text="@string/start_process" />

            <Button
                android:id="@+id/next"
                style="@style/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:drawableRight="@drawable/ic_menu_forward"
                android:enabled="false"
                android:padding="5dp"
                android:text="@string/next_process" />


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
