<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="com.example.michal.myapplication.Thinning">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/extraction"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <LinearLayout
        android:id="@+id/content_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/view_extraction_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        style="@style/BottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/settings"
            android:visibility="visible" />

        <Button
            android:id="@+id/next"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/extraction_start" />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black90"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:indeterminate="false"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:progressDrawable="@drawable/progress_bar" />

        <TextView
            android:id="@+id/progress_bar_text"
            style="@style/ProgressBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center" />

    </RelativeLayout>

</RelativeLayout>
